# ups120

./: .gitignore  .gitmodules  CONFIG_REFACTOR_PLAN.md  Cargo.toml  DESIGN_MEMORANDUM.md  MVP_Business_Process_Plan.md  Makefile  PLAN.md  README.md  WORKFLOW.md  bq25730_stm32g031_example_plan.md  build.rs  lefthook.yml
.cargo/: config.toml
.roo/: mcp.json  system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator
doc/: BQ76920_Demo_Plan.md  battery_config_plan.md  bq76920_communication_plan.md  bq76920_config_plan.md  bq76920_fix_plan.md  bq76920_integration_fix_plan.md
models/: ups120-shell-26650-BATTERY.step  分体式K70.stp
models/028/: 028.dwg  028a.stp  028b.stp
src/: bq25730_task.rs  bq76920_task.rs  data_types.rs  ina226_task.rs  main.rs  shared.rs
src/usb/: endpoints.rs  mod.rs
