[package]
authors = ["Ivan Li<ivanli2048@gmail.com>"]
edition = "2024"
name = "eload"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"

# Change this import as required for your MCU.

embassy-embedded-hal = { path = "./embassy/embassy-embedded-hal" }
embassy-executor = { path = "./embassy/embassy-executor", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-futures = { path = "./embassy/embassy-futures" }
embassy-stm32 = { path = "./embassy/embassy-stm32", features = [
  "defmt",
  "time-driver-any",
  "stm32g031c8",
  "memory-x",
  "unstable-pac",
  "exti",
  "single-bank",
] }
embassy-sync = { path = "./embassy/embassy-sync", features = ["defmt"] }
embassy-time = { path = "./embassy/embassy-time", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-usb = { path = "./embassy/embassy-usb", features = ["defmt"] }

embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-io-async = { version = "0.6.1" }
embedded-alloc = "0.6.0"

heapless = { version = "0.8.0", features = ["serde"] }
numtoa = "0.2.4"
portable-atomic = { version = "1.11.0" }
ryu = "1.0.20"
static_cell = "2.1.0"
uom = { version = "0.36.0", default-features = false, features = ["si", "f64"] }
binrw = { version = "0.15.0", default-features = false }
libm = "0.2.8"

gx21m15 = { features = ["async"], version = "0.1.1" }
gc9307-async = { version = "0.1.1", features = ["async"] }
usbpd = { version = "0.2.1", features = ["defmt"] }
m24c64-driver = { version = "0.0.2" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
