[package]
authors = ["Ivan Li<ivanli2048@gmail.com>"]
edition = "2024"
name = "ups120"
version = "0.1.0"

[dependencies]
# Change stm32g0b1re to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", path = "./embassy/embassy-stm32", features = [
  "defmt",
  "time-driver-any",
  "stm32g031c8",
  "memory-x",
  "unstable-pac",
  "exti",
] }
embassy-sync = { version = "0.6.2", path = "./embassy/embassy-sync", features = [
  "defmt",
] }
embassy-executor = { version = "0.7.0", path = "./embassy/embassy-executor", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.4.0", path = "./embassy/embassy-time", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-usb = { version = "0.4.0", path = "./embassy/embassy-usb", default-features = false, features = [
  "defmt",
] }
embassy-futures = { version = "0.1.0", path = "./embassy/embassy-futures" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
portable-atomic = { version = "1.11.0", features = ["unsafe-assume-single-core"] }

embedded-io-async = { version = "0.6.1" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
